--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -16,8 +16,6 @@ return array(
         'host' => '?', // for 'smtp' or 'smtpoverssl' type only, otherwise remove or leave as is
         'user' => '?', // for 'smtp' or 'smtpoverssl' type only, otherwise remove or leave as is
         'pw' => '?', // for 'smtp' or 'smtpoverssl' type only, otherwise remove or leave as is
-        'port' => 587, //for 'smtpoverssl' type only, otherwise remove or leave as is
-        'ssl' => 'tls', //for 'smtpoverssl' type only, otherwise remove or leave as is
     ),
     'db' => array(
         'user' => '?',
@@ -29,3 +27,27 @@ return array(
         'currency' => 'USD',
     ),
 );
+
+
+
+case 'smtpoverssl':
+                    $optionsArray = array(
+                        'host' => $this->configManager->need('mail.host'),
+                        'port' => 587,
+                        'connection_class' => 'plain',
+                        'connection_config' => array(
+                            'username' => $this->configManager->need('mail.user'),
+                            'password' => $this->configManager->need('mail.pw'),
+                            'ssl' => $this->configManager->need('mail.ssl'),
+                        ),
+                    );
+                    
+                    $optionPort =  $this->configManager->get('mail.port');
+                    if (is_numeric($optionPort)) {
+                        $optionsArray['port'] = $optionPort;
+                    }
+                    
+                    $options = new SmtpOptions($optionsArray);
+                    $this->transport = new Smtp();
+                    $this->transport->setOptions($options);
+                    break;
